examples/test/testpolicy17665.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17665
  namespace: namespace444
spec:
  podSelector:
    matchLabels:
      key19: value26
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key25: value43
          key8: value20
      podSelector:
        matchLabels:
          key41: value29
          key8: value48
